0.05
 - Fix typo in doc.
 - Fix use lib '.' in Makefile.PL.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Update Module::Install to 1.21 version.
 - Update copyright years.

0.04 2015-10-22T11:41:11+02:00
 - Improve SEE ALSO section in doc.
 - Improve doc.
 - Move author tests to xt/ directory.
 - Update Module::Install to 1.16 version.

0.03 2015-03-31T23:05:39+02:00
 - Add comments to tests.
 - Fix warning with no element on stack.
 - Improve doc for '*' as rules key.
 - Remove comments.
 - Remove global variables.
 - Rewrite SEE ALSO section to proper Task.

0.02 2015-02-09T07:49:11+01:00
 - Add examples directory.
 - Fix minimal version of PYX::Parser.

0.01 2015-02-06T16:15:04+01:00
 - First version.