@@ -104,10 +104,10 @@ REPOSITORY
     <https://github.com/tupinek/PYX-XMLNorm>
 
 AUTHOR
-    Michal Špaček skim@cpan.org.
+    Michal Josef Špaček skim@cpan.org.
 
 LICENSE AND COPYRIGHT
-    © 2011-2023 Michal Špaček
+    © 2011-2023 Michal Josef Špaček
 
     BSD 2-Clause License
 
