@@ -306,11 +306,11 @@ L<https://github.com/tupinek/PYX-XMLNorm>
 
 =head1 AUTHOR
 
-Michal Špaček L<skim@cpan.org>.
+Michal Josef Špaček L<skim@cpan.org>.
 
 =head1 LICENSE AND COPYRIGHT
 
-© 2011-2023 Michal Špaček
+© 2011-2023 Michal Josef Špaček
 
 BSD 2-Clause License
 
