@@ -3,6 +3,7 @@
  - Fix use lib '.' in Makefile.PL.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
+ - Update author name.
  - Update copyright years.
 
 0.04 2015-10-22T11:41:11+02:00
